plugin corregido del tema

--- a/theme.yml
+++ b/theme.yml
@@ -2,5 +2,5 @@ name: theme_default
 version: 0.1.0
 patches:
  lms-env: |
-         "DEFAULT_SITE_THEME": "lilactheme"
+         DEFAULT_SITE_THEME: "lilactheme"
 
